k8s/namespace.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-azodha
  namespace: azodha-dev
