k8s/opentelemetry.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: azodha-dev
spec:
  ports:
    - port: 4317
      name: otlp-grpc
  selector:
    app: otel-collector

...

apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: azodha-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
      - name: otel-collector
        image: otel/opentelemetry-collector:latest
        args: ["--config=/etc/otel/config.yaml"]
