k8s/otel.yaml
#otel-config.yaml

apiVersion: v1
kind: ConfigMap
metadata:
  name: otel-collector-config
  namespace: azodha-dev
data:
  config.yaml: |
    receivers:
      otlp:
        protocols:
          grpc:
          http:

    exporters:
      logging:
        loglevel: info

    service:
      pipelines:
        traces:
          receivers: [otlp]
          exporters: [logging]
...
#otel.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: azodha-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector:latest
          args: ["--config=/etc/otel/config.yaml"]
          ports:
            - containerPort: 4317
            - containerPort: 4318
          volumeMounts:
            - name: otel-config
              mountPath: /etc/otel
      volumes:
        - name: otel-config
          configMap:
            name: otel-collector-config
            items:
              - key: config.yaml
                path: config.yaml
...
#otel-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: azodha-dev
spec:
  selector:
    app: otel-collector
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
