k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: predict-api
spec:
  type: ClusterIP
  selector:
    app: predict-api
  ports:
    - port: 80
      targetPort: 8000
